first collapsible section finished

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
             <li class="nav-item">
               <a href="#" class="nav-link">About</a>
             </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#" onclick="">(021) 496 1961</a>
+                <a class="dropdown-item text-lowercase" href="#">info@abctaxis.ie</a>
+                <a class="dropdown-item text-lowercase" href="https://www.facebook.com/corktaxiabc">Facebook</a>
+              </div>
             </li>
           </ul>
         </div>
