google maps added (adjustment needed)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Service</a>
+              <a href="#service" class="nav-link">Service</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Corporate</a>
@@ -49,7 +49,7 @@
                 Contact
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#" onclick="">(021) 496 1961</a>
+                <a class="dropdown-item" href="#">(021) 496 1961</a>
                 <a class="dropdown-item text-lowercase" href="#">info@abctaxis.ie</a>
                 <a class="dropdown-item text-lowercase" href="https://www.facebook.com/corktaxiabc">Facebook</a>
               </div>
@@ -74,18 +74,41 @@
           Our Drivers and call centre staff are professional and pleasant.
           We have over 60 cars and people carriers to meet your transport requirements.
         </p>
-        <a href="#test" class="readMore">Get Started</a>
+        <a href="#service" class="readMore">Get Started</a>
       </div>
     </div>
   </div>
 </section>
 
-<section>
-  <div id="test" class="container">
-      <p>Hello hello hello</p>
+<section class="service" id="service">
+  <div class="container">
+    <h4 class="card-header text-center">Service</h4>
+    <div class="row col-sm-12">
+      <div class="col">
+        <h5>Our Services include</h5>
+        <p>24 hour passenger pick-up & deliver</p>
+        <p>24 hour parcel pick-up & delivery</p>
+        <p>Airport meet and greet</p>
+        <p>Long distance travel</p>
+        <p>Four to eight seater transport</p>
+        <p>Wheelchair accessible transport</p>
+        <p>Shopping trips and sightseeing tours</p>
+        <p>Corporate events, sporting events</p>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
+            <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                    style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 </body>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
