--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
         <p>Shopping trips and sightseeing tours</p>
         <p>Corporate events, sporting events</p>
       </div>
-      <div class="col">
+      <div class="col" style="padding: 50px">
         <div class="card">
-          <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
-            <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                    style="border:0" allowfullscreen></iframe>
+          <div class="card card-body">
+            <div id="map-container-google-2" class="z-depth-1 map-container" style="height: 500px">
+              <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                      style="border:0" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
