background set for 'service'

--- a/index.html
+++ b/index.html
@@ -80,27 +80,30 @@
   </div>
 </section>
 
-<section class="service" id="service">
+<section class="service" id="service" style="background-image: url(img/pexels-gdtography-950241.jpg)">
   <div class="container">
     <h4 class="card-header text-center">Service</h4>
     <div class="row col-sm-12">
       <div class="col">
-        <h5>Our Services include</h5>
-        <p>24 hour passenger pick-up & deliver</p>
-        <p>24 hour parcel pick-up & delivery</p>
-        <p>Airport meet and greet</p>
-        <p>Long distance travel</p>
-        <p>Four to eight seater transport</p>
-        <p>Wheelchair accessible transport</p>
-        <p>Shopping trips and sightseeing tours</p>
-        <p>Corporate events, sporting events</p>
+        <h5>Our Services Include</h5>
+        <ul class="list-unstyled">
+          <li>24 hour passenger pick-up & deliver</li>
+          <li>24 hour parcel pick-up & delivery</li>
+          <li>Airport meet and greet</li>
+          <li>Long distance travel</li>
+          <li>Four to eight seater transport</li>
+          <li>Wheelchair accessible transport</li>
+          <li>Shopping trips and sightseeing tours</li>
+          <li>Corporate events, sporting events</li>
+        </ul>
       </div>
-      <div class="col" style="padding: 50px">
+      <div class="col" id="service_col_2">
         <div class="card">
-          <div class="card card-body">
-            <div id="map-container-google-2" class="z-depth-1 map-container" style="height: 500px">
-              <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                      style="border:0" allowfullscreen></iframe>
+            <div class="card card-body">
+              <div id="map-container-google-2" class="z-depth-1 map-container" style="height: 500px">
+                <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                        style="border:0" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div>
@@ -109,7 +112,6 @@
   </div>
 </section>
 </body>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
