second drop down added

--- a/index.html
+++ b/index.html
@@ -84,17 +84,23 @@
   <div class="container">
     <h4 class="card-header text-center">Service</h4>
     <div class="row col-sm-12">
-      <div class="col">
-        <h5>Our Services Include</h5>
+      <div class="col" id="service_col_1">
         <ul class="list-unstyled">
-          <li>24 hour passenger pick-up & deliver</li>
-          <li>24 hour parcel pick-up & delivery</li>
-          <li>Airport meet and greet</li>
-          <li>Long distance travel</li>
-          <li>Four to eight seater transport</li>
-          <li>Wheelchair accessible transport</li>
-          <li>Shopping trips and sightseeing tours</li>
-          <li>Corporate events, sporting events</li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Our Services Include
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">24 hour passenger pick-up & deliver</a>
+              <a class="dropdown-item" href="#">24 hour parcel pick-up & delivery</a>
+              <a class="dropdown-item" href="#">Airport meet and greet</a>
+              <a class="dropdown-item" href="#">Long distance travel</a>
+              <a class="dropdown-item" href="#">Four to eight seater transport</a>
+              <a class="dropdown-item" href="#">Wheelchair accessible transport</a>
+              <a class="dropdown-item" href="#">Shopping trips and sightseeing tours</a>
+              <a class="dropdown-item" href="#">Corporate events, sporting events</a>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="col" id="service_col_2">
