need to fix tabs

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <a href="#service" class="nav-link">Service</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Corporate</a>
+              <a href="#corporate" class="nav-link">Corporate</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -80,7 +80,7 @@
   </div>
 </section>
 
-<section class="service" id="service" style="background-image: url(img/pexels-gdtography-950241.jpg)">
+<section class="service" id="service" style="background-image: url(img/pexels-gdtography-950241.jpg); padding: 50px">
   <div class="container">
     <h4 class="card-header text-center">Service</h4>
     <div class="row col-sm-12">
@@ -114,6 +114,78 @@
           </div>
         </div>
       </div>
+    </div>
+</section>
+
+<section class="corporate" id="corporate">
+  <div class="container">
+    <h4 class="card-header text-center">Corporate</h4>
+    <div class="col">
+      <p>ABC provide the facility for corporate and personal accounts payable monthly
+        Phone or email us for an application.
+        ABC give top priority to calls from account holders.
+        ABC taxis are Cork's leading provider of taxi and courier services for Premier Irish businesses and personal accounts.
+        Detailed invoices are issued to account holders every month.
+        Full time account staff available Monday to Friday to deal with all enquiries.</p>
+    </div>
+  </div>
+</section>
+
+<section class="about" id="about">
+  <div class="container">
+    <h4 class="card-header text-center">About</h4>
+    <div class="col">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a href="#home" class="nav-link active" data-bs-toggle="tab">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#profile" class="nav-link" data-bs-toggle="tab">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a href="#messages" class="nav-link" data-bs-toggle="tab">Messages</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane fade show active" id="home">
+          <p>Home tab content ...</p>
+        </div>
+        <div class="tab-pane fade" id="profile">
+          <p>Profile tab content ...</p>
+        </div>
+        <div class="tab-pane fade" id="messages">
+          <p>Messages tab content ...</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <p>
+        ABC Taxis is a well established Cork taxi company.
+        We have been serving the people of Cork for over 25 years.
+
+        Our aim is to offer you,
+        the customer a first class service at an affordable price.
+        We are aware that value for money is at the forefront of most people's minds at the moment,
+        as well as quality service.
+
+        With our experience and attention to detail we aim to provide all of this,
+        as well as being able to remove the stress and hassle that travel can entail.
+
+        We have a range of vehicles to suit all requirements,
+        including 4 and 8 seater cars and people carriers,
+        with wheelchair access.
+
+        We are also happy to offer corporate travel & account work as well as all
+        domestic and commercial taxi work.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="copyright">
+  <div class="container">
+    <h4 class="card-header text-center">Copyright</h4>
+    <div class="col">
     </div>
   </div>
 </section>
