Cork City added to google maps

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="card">
             <div class="card card-body">
               <div id="map-container-google-2" class="z-depth-1 map-container" style="height: 500px">
-                <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=cork%20city+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0"
                         style="border:0" allowfullscreen></iframe>
               </div>
             </div>
